# OCI-CLI-Tools

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  OCI_UPST_SESSION_MANAGER_PLAN.md  QUICKSTART.md  README.md  config.yml  create_service_user.py  delete_token_exchange_trust.py  get_token_exchange_trust.py  goto_poc.py  install.sh  oauth_client_cred_flow.py  oci_session_authenticate.py  oci_session_wrapper.py  oci_upst_session_manager.py  patch_token_exchange_trust.py  put_token_exchange_trust.py  pyproject.toml  requirements.txt  set_token_exchange_trust.py  woci-manager.ini  woci_manager.ini  woci_manager.ini.okta-example
.github/: labels.yml
.github/workflows/: labels.yml  release.yml
tests/: test_config_resolution.py  test_crypto_and_jwt.py  test_ensure_session.py  test_passthrough.py  test_refresh_token_file.py  test_update_oci_config.py
